tutorial/openkruise/cloneset/blue_green/3.cloneset_green_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-v2
  labels:
    app: nginx-demo-v2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-demo-v2
