tutorial/openkruise/cloneset/blue_green/2.cloneset_blue_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginx-demo.myapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-demo-v1
          servicePort: 80
