tutorial/openkruise/cloneset/blue_green/4.cloneset_green_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo-v2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
  - host: nginx-demo.myapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-demo-v2
          servicePort: 80
